#pragma once

#include "FileLibrary.h"
#include "EntryDetails.h"
#include "ToolClasses.h"

/* EntryParser - 二进制目录结构解析器
 *
 * 功能:
 *   解析二进制目录块中的文件/目录信息
 *   支持压缩模式（扫描本地文件）和解压模式（读取加密块）
 *   使用模板化解析函数处理多种数据类型
 *   管理文件队列和目录队列用于流程控制
 *
 * 公共接口:
 *   parser(): 主解析函数，处理缓冲区中的目录数据
 *   setRootForDecompression(): 设置解压时的根路径
 */
namespace Y_flib
{
    class EntryParser
    {
    private:
        EntryQueue &entryQueue;
        FileTaskQueue &fileQueue;
        std::vector<std::string> &filePathToScan;
        Y_flib::DataBlock &buffer;
        const Y_flib::Header &header;
        const Y_flib::DirectoryOffsetSize &offset;
        const Y_flib::DirectoryOffsetSize &tempOffset;
        size_t parserMode = 0; // 0：占位、1：压缩模式、2：解压模式

        std::filesystem::path tempPathForRootParser;

        /* 检查缓冲区读取范围是否有效，防止越界 */
        void checkBounds(Y_flib::DirectoryOffsetSize blockPosition, Y_flib::FileNameSize requiredSize) const;

        /* 模板化函数：解析文件名长度和内容，安全构造std::string */
        template <typename T>
        void fileDetailsParser(
            T &fileNameSize,
            std::string &fileName,
            Y_flib::DirectoryOffsetSize &bufferPtr)
        {
            // 编译时检查

            static_assert(std::is_trivially_copyable_v<T>,
                          "Cannot write non-trivially-copyable type");
            static_assert(!std::is_pointer_v<T>,
                          "Cannot safely write raw pointers");
            static_assert(!std::is_polymorphic_v<T>,
                          "Cannot safely write polymorphic types");
            try
            {
                // 1. 读取文件名长度
                checkBounds(bufferPtr, sizeof(T));
                memcpy(&fileNameSize, buffer.data() + bufferPtr, sizeof(T));
                bufferPtr += sizeof(T);

                // 2. 读取字符串内容,安全构造 std::string,防止未初始化的越界报错
                checkBounds(bufferPtr, static_cast<Y_flib::FileNameSize>(fileNameSize));
                fileName.assign(
                    buffer.data() + bufferPtr,
                    buffer.data() + bufferPtr + fileNameSize);
                bufferPtr += fileNameSize;
            }
            catch (const std::exception &e)
            {
                throw std::runtime_error(
                    "fileDetailsParser failed at offset " +
                    std::to_string(bufferPtr) + ": " + e.what());
            }
        }

        /* 模板化函数：按指定类型解析数值，返回解析的值 */
        template <typename T>
        T readDataFromReadBlock(Y_flib::DirectoryOffsetSize &bufferPtr)
        {
            try
            {
                T num;
                checkBounds(bufferPtr, sizeof(T));
                memcpy(&num, buffer.data() + bufferPtr, sizeof(T));
                bufferPtr += sizeof(T);

                return num;
            }
            catch (const std::exception &e)
            {
                throw std::runtime_error(
                    "readDataFromReadBlock failed at offset " +
                    std::to_string(bufferPtr) + ": " + e.what());
            }
        }

        /* 连接文件名到当前路径，返回完整路径 */
        std::filesystem::path pathConnector(std::string &fileName);

        /* 解析单个文件的元数据，将文件入队 */
        void fileParser(Y_flib::DirectoryOffsetSize &bufferPtr, bool isRoot);

        /* 解析单个目录的元数据和子元素，将目录入队 */
        void directoryParser(Y_flib::DirectoryOffsetSize &bufferPtr, bool isRoot);

        /* 解析根目录节点，处理多路径扫描 */
        void rootParser(Y_flib::DirectoryOffsetSize &bufferPtr, const std::vector<std::string> &filePathToScan, Y_flib::FileCount &countOfChildDirectory, bool &noDirec);

    public:
        std::string rootForDecompression;

        /* 设置解压时的根目录路径 */
        void setRootForDecompression(std::string rootForDecompression)
        {
            this->rootForDecompression = rootForDecompression;
        }

        /* 构造函数，初始化解析器，自动检测压缩/解压模式 */
        EntryParser(Y_flib::DataBlock &buffer, EntryQueue &entryQueue,
                    FileTaskQueue &fileQueue, const Y_flib::Header &header,
                    const Y_flib::DirectoryOffsetSize &offset,
                    const Y_flib::DirectoryOffsetSize &tempOffset,
                    std::vector<std::string> &filePathToScan)
            : entryQueue(entryQueue),
              fileQueue(fileQueue),
              filePathToScan(filePathToScan),
              buffer(buffer),
              header(header),
              offset(offset),
              tempOffset(tempOffset)
        {
            parserMode = ((!filePathToScan.empty()) ? 1 : 2); // 非空表示压缩
        }

        /* 主解析函数，处理缓冲区中的目录数据块 */
        void parser(Y_flib::DirectoryOffsetSize &bufferPtr, Y_flib::FileCount &countOfChildDirectory);
    };
} // namespace Y_flib
