@startuml File_System_and_Serialization
scale 2
!theme plain
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam defaultFontName "Microsoft YaHei"
skinparam nodesep 35
skinparam ranksep 40
caption v2.2.0 · 2026-09-07

title File System & Binary Serialization — 三阶段写入 + 纯读装载

package "Entry & Path" {
    class EntryDetails {
        - name / sizeOfName / fileSize
        - isFile : bool
        - fullPath : path
        + getName() / getFullPath()
        + getFileSizeInDetails() / getIsFile()
    }
    class FileTask {
        + entry : EntryDetails
        + processedSizeOffset : SlotOffset 「压缩:预留槽偏移」
        + compressedSize : FileSize 「解压:压缩后大小」
    }
    class EncodingUtils {
        + {static} pathFromUtf8 / pathToUtf8
        + {static} qStringToUtf8 / utf8ToQString
    }
}

package "Binary Format" {
    class "<<packed 19B>>\nHeader" as Header {
        + magicNum_1/2 : uint32_t
        + strategy / version / headerOffset : uint8_t
        + directoryOffset : uint64_t
    }
    class StandardsWriter {
        + writeBinaryStandards(value, stream)
        + {static} writeDataBlock(size, stream, buffer)
    }
    class StandardsReader {
        + readBinaryStandards<T>() : T
        + {static} readDataBlock(size, stream, buffer)
    }
    class Locator {
        + locateFromBegin(stream, offset)
        + locateFromEnd(stream, offset)
    }
}

package "① 建档 HeaderWriter" {
    class HeaderWriter {
        - writeHeader(..) / writeDirectory(..)
        + headerWriter(paths, outPath, logicalRoot, mode)
        「魔数+文件头+目录树+预留字段」
    }
    class EntryProcessor {
        + entryProcessor(paths, fullOutPath, root)
        「BFS 扫描,序列化目录树」
    }
    class BinaryStandardWriter {
        + writeLogicalRoot / writeRoot
        + writeBlankSeparatedStandard
    }
}

package "② 数据 DataExporter (纯追加)" {
    class DataExporter {
        - outFile : fstream
        - processedFileSize
        + exportCompressedData(data) 「flag+真实块长+数据」
        + exportDecompressedData(data)
        + currentFileProcessedSize() / startNextFile()
        「从不 seek 回改」
    }
    class DataLoader {
        - inFile : ifstream
        + dataLoader() / getBlock()
        + isDone() / reset(path)
        「getBlock 返回内部引用,调用方须复制」
    }
}

package "③ 收尾 CatalogFinalizer" {
    class CatalogFinalizer {
        - archiveFile : fstream
        + finalize(sizeEntries, spans, enc, mode)
        - backfillFileSizes(..) 「先」
        - encryptDirectoryBlocks(..) 「后」
        「次序焊死在类内」
    }
    class SizeFillEntry {
        + slotOffset : SlotOffset
        + processedSize : FileSize
    }
    class BlockSpan {
        + startPos : SlotOffset
        + size : BlockLength
        + ivSlotPos() : SlotOffset
    }
}

package "纯读装载 BinaryStandardLoader" {
    class BinaryStandardLoader {
        - header / cursor / inFile
        + fileQueue : FileTaskQueue
        + blockPosition : vector~BlockSpan~
        + headerLoaderIterator(encryption)
        + takeBlockSpans() : 目录块位置表移交
        + restartLoader() / allLoopIsDone()
        「读目录时顺手记块位置,不持写句柄」
    }
    class EntryParser {
        + parser(bufferPtr, count)
        「目录块→FileTask/EntryQueue/LinkTask」
    }
}

DataExporter *-- Locator
DataExporter *-- StandardsWriter
BinaryStandardLoader *-- EntryParser : unique_ptr
BinaryStandardLoader o-- FileTask : fileQueue

HeaderWriter ..> EntryProcessor : creates
EntryProcessor *-- BinaryStandardWriter
EntryProcessor ..> EntryDetails : BFS
BinaryStandardLoader ..> Header : reads
BinaryStandardLoader ..> StandardsReader : uses
EntryParser ..> Header : reads

CatalogFinalizer ..> SizeFillEntry : 回填表
CatalogFinalizer ..> BlockSpan : 加密回写
BinaryStandardLoader ..> BlockSpan : 记录
EncodingUtils ..> EntryDetails : 路径转换

note as N1
  **归档写入三阶段(任何阶段不并发):**
  ① HeaderWriter — 建档:文件头/目录树/预留字段
  ② DataExporter — 数据区纯追加(块长直写真实值)
  ③ CatalogFinalizer — 收尾:回填"处理后大小"槽
     + 目录区原地加密(先回填后加密,类内焊死)
end note

@enduml
